Revision history for Perl extension Apache::Dispatch

0.10  05.07.2001
  -
  * new maintainer: Thomas Klausner, domm@zsi.at
  - fixed DispatchISA bug that kept adding the same classes to @ISA
    (Barrie Slaymaker)
  - fixed bug for <Location /> (thanks again to Barrie for the spot)
  - suggested use of NEXT.pm pseudoclass in AUTOLOAD documentation
  - added test suite based on Apache::Test (from 2.0)
  - made invoked method available from pre/post/error handlers
    (suggested by Tatsuhiko Miyagawa)

0.09  01.31.2001
  - added DispatchLocation - now .htaccess configs should work (really)
    thanks yet again to Matt Sergeant
  - documented DispatchLocation
  - added DispatchRequire (suggested by Vivek Khera, and many others
    I can't remember specifically)
  - documented DispatchRequire
  - fixed DispatchExtras Post documentation (Vivek Khera)
  - Apache::Dispatch was added to Joshua Chamas' benchmarking
    stuff - see ToDo for some results

0.08  12.04.2000
  - minor documentation additions and fixups
  - changed all directives so that they can be used from within
    .htaccess files (suggested by Matt Sergeant)
  - removed extraneous SERVER_CREATE and SERVER_MERGE sections

0.07  10.26.2000
  - added support for output filtering
    thanks to Ken Williams for additional Apache::Filter functionality
  - added FILTERING section to documentation
  - added DispatchISA functionality to set parent classes for 
    dispatched module
  - added DispatchAUTOLOAD directive to make AUTOLOAD behavior user
    defined
  - added AUTOLOAD section to documentation
  - more, better documentation
  - modified Apache::ModuleConfig->get() calls
    thanks to Doug MacEachern for the enlightenment
  - fixed bug that allowed for duplicate DispatchExtras directives
  - fixed directive inheritance problems
  - fixed dispatch_index bug
  - fixed one minor "my $x if 0" condition
  - fixed DispatchStat ISA directive to properly recurse all levels